--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://ep-twilight-wood-715079.us-east-2.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=someshkumar71524
+spring.datasource.password=fgDw0bvsey6N
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
